--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="container">
       <div id="xsampa">
         <h1>X-SAMPA</h1>
-        <textarea name="X-SAMPA test" id="x-sampa-text"></textarea>
+        <textarea id="x-sampa-text"></textarea>
       </div>
       <div id="ipa">
         <h1>IPA</h1>
-        <textarea name="X-SAMPA output" id="x-sampa-output"></textarea>
+        <textarea id="ipa-text"></textarea>
       </div>
     </div>
-    <script src="conv.js"></script>
+    <script src="ipa.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
