tweaks'n'things more meaningful changes coming ... soon? ¯\_(ツ)_/¯

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   </head>
   <body>
     <div class="container">
+      <div id="info"></div>
       <div id="xsampa">
         <h1>X-SAMPA</h1>
         <textarea id="x-sampa-text"></textarea>
       </div>
       <div id="ipa">
         <h1>IPA</h1>
-        <textarea id="ipa-text"></textarea>
+        <textarea readonly id="ipa-text"></textarea>
       </div>
     </div>
     <script src="ipa.js"></script>
